--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 1) replace #defines of MEMORY_LIMIT and PAGE_SIZE
-2) deal with un-allocating the initial block, for short-lived allocators
+2) deal with un-allocating the additional blocks for short-lived allocators
+3) add a destroy/free_all
